--- a/styles.css
+++ b/styles.css
@@ -117,14 +117,13 @@ body::-webkit-scrollbar{
     font-size: 36px;
 }
 #toggle-dark{
+    z-index: 1;
     cursor: pointer;
     color: black;
     position: fixed;
     left: 85%;
     top: 1%;
-    border-radius: 4px;
     font-size: 24px;
-    padding: 0px 8px;
 }
 #container-left--buttons{
     display: flex;
