--- a/styles.css
+++ b/styles.css
@@ -116,13 +116,20 @@ body::-webkit-scrollbar{
     color: gray;
     font-size: 36px;
 }
-#toggle-dark{
-    z-index: 1;
-    cursor: pointer;
-    color: black;
+#dark-mode-section{
+    display: flex;
+    gap: 4px;
     position: fixed;
-    left: 85%;
-    top: 1%;
+    left: 82%;
+    top: 0.7%;
+    z-index: 1;
+    border: 2px solid grey;
+    padding: 3px 4px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+#toggle-dark{
+    color: black;
     font-size: 24px;
 }
 #container-left--buttons{
@@ -250,7 +257,9 @@ body::-webkit-scrollbar{
 }
 @media only screen  and (max-width :445px){
     
-    
+    #dark-mode-section{
+        left: 75%;
+    }
     #container-left{
         visibility: hidden;
         z-index: 1;
